# ytdl

./: .gitignore  .gitmodules  CMakeLists.txt
include/ytdl/: job.hh  log.hh
src/: log.cc  main.cc
